fixed dataviz spacing for mobile

--- a/style.css
+++ b/style.css
@@ -165,7 +165,6 @@ a.body-link:hover{
 	flex-direction: column;
 	align-items: center;
 	margin:auto;
-	height: 100vh;
 	width:100%;
 }
 
